@@ -33,6 +33,89 @@ void DxccTableWidget::clear()
     show();
 }
 
+void DxccTableWidget::updateDxTable(const QString &condition,
+                                    const QVariant &conditionValue,
+                                    const Band &highlightedBand)
+{
+    FCT_IDENTIFICATION;
+
+    qCDebug(function_parameters) << condition << conditionValue;
+
+    const QList<Band>& dxccBands = BandPlan::bandsList(true, true);
+
+    if ( dxccBands.isEmpty() )
+        return;
+
+    QString filter(QLatin1String("1 = 1"));
+    StationProfile profile = StationProfilesManager::instance()->getCurProfile1();
+    QStringList stmt_band_part1;
+    QStringList stmt_band_part2;
+
+    if ( profile != StationProfile() )
+        filter.append(QString(" AND c.my_dxcc = %1").arg(profile.dxcc));
+
+    for ( const Band &band : dxccBands )
+    {
+        stmt_band_part1 << QString(" MAX(CASE WHEN band = '%0' THEN  CASE WHEN (eqsl_qsl_rcvd = 'Y') THEN 2 ELSE 1 END  ELSE 0 END) as '%0_eqsl',"
+                                   " MAX(CASE WHEN band = '%0' THEN  CASE WHEN (lotw_qsl_rcvd = 'Y') THEN 2 ELSE 1 END  ELSE 0 END) as '%0_lotw',"
+                                   " MAX(CASE WHEN band = '%0' THEN  CASE WHEN (qsl_rcvd = 'Y')      THEN 2 ELSE 1 END  ELSE 0 END) as '%0_paper' ")
+                                  .arg(band.name);
+        stmt_band_part2 << QString(" c.'%0_eqsl' || c.'%0_lotw'|| c.'%0_paper' as '%0'").arg(band.name);
+    }
+
+    QString stmt = QString("WITH dxcc_summary AS "
+                           "             ("
+                           "			  SELECT  "
+                           "			  m.dxcc , "
+                           "		      %1 "
+                           "		      FROM contacts c"
+                           "		           LEFT OUTER JOIN modes m on c.mode = m.name"
+                           "		      WHERE %2 AND %3 GROUP BY m.dxcc ) "
+                           " SELECT m.dxcc,"
+                           "	   %4 "
+                           " FROM (SELECT DISTINCT dxcc"
+                           "	   FROM modes) m"
+                           "        LEFT OUTER JOIN dxcc_summary c ON c.dxcc = m.dxcc "
+                           " ORDER BY m.dxcc").arg(stmt_band_part1.join(","),
+                                                   filter,
+                                                   condition.arg(conditionValue.toString()),
+                                                   stmt_band_part2.join(","));
+
+    qCDebug(runtime) << stmt;
+
+    dxccTableModel->setQuery(stmt);
+
+    // get default Brush from Mode column - Mode Column has always the default color
+    const QVariant &defaultBrush = dxccTableModel->headerData(0, Qt::Horizontal, Qt::BackgroundRole);
+
+    dxccTableModel->setHeaderData(0, Qt::Horizontal, tr("Mode"));
+
+    for ( int i = 0; i < dxccBands.size(); i++ )
+    {
+        dxccTableModel->setHeaderData(i+1, Qt::Horizontal, ( highlightedBand == dxccBands.at(i) ) ? QBrush(Qt::darkGray)
+                                                                                               : defaultBrush, Qt::BackgroundRole);
+        dxccTableModel->setHeaderData(i+1, Qt::Horizontal, dxccBands.at(i).name);
+    }
+
+    show();
+}
+
+void DxccTableWidget::setDxCallsign(const QString &dxCallsign, Band band)
+{
+    FCT_IDENTIFICATION;
+
+    qCDebug(function_parameters) << dxCallsign;
+
+    if (!dxCallsign.isEmpty())
+        updateDxTable("c.callsign = '%1'", dxCallsign.toUpper(), band);
+    else
+    {
+        dxccTableModel->clear();
+        show();
+    }
+
+}
+
 void DxccTableWidget::setDxcc(int dxcc, Band highlightedBand)
 {
     FCT_IDENTIFICATION;
@@ -40,67 +123,10 @@ void DxccTableWidget::setDxcc(int dxcc, Band highlightedBand)
     qCDebug(function_parameters) << dxcc;
 
     if ( dxcc )
-    {
-        const QList<Band>& dxccBands = BandPlan::bandsList(true, true);
-
-        if ( dxccBands.size() == 0 )
-            return;
-
-        QString filter(QLatin1String("1 = 1"));
-        StationProfile profile = StationProfilesManager::instance()->getCurProfile1();
-        QStringList stmt_band_part1;
-        QStringList stmt_band_part2;
-
-        if ( profile != StationProfile() )
-            filter.append(QString(" AND c.my_dxcc = %1").arg(profile.dxcc));
-
-        for ( int i = 0; i < dxccBands.size(); i++ )
-        {
-            stmt_band_part1 << QString(" MAX(CASE WHEN band = '%1' THEN  CASE WHEN (eqsl_qsl_rcvd = 'Y') THEN 2 ELSE 1 END  ELSE 0 END) as '%2_eqsl',"
-                                       " MAX(CASE WHEN band = '%3' THEN  CASE WHEN (lotw_qsl_rcvd = 'Y') THEN 2 ELSE 1 END  ELSE 0 END) as '%4_lotw',"
-                                       " MAX(CASE WHEN band = '%5' THEN  CASE WHEN (qsl_rcvd = 'Y')      THEN 2 ELSE 1 END  ELSE 0 END) as '%6_paper' ")
-                                        .arg(dxccBands[i].name, dxccBands[i].name,
-                                             dxccBands[i].name, dxccBands[i].name,
-                                             dxccBands[i].name, dxccBands[i].name);
-            stmt_band_part2 << QString(" c.'%1_eqsl' || c.'%2_lotw'|| c.'%3_paper' as '%4'").arg(dxccBands[i].name, dxccBands[i].name,
-                                                                                                 dxccBands[i].name, dxccBands[i].name);
-        }
-
-        QString stmt = QString("WITH dxcc_summary AS "
-                               "             ("
-                               "			  SELECT  "
-                               "			  m.dxcc , "
-                               "		      %1 "
-                               "		      FROM contacts c"
-                               "		           LEFT OUTER JOIN modes m on c.mode = m.name"
-                               "		      WHERE %2 AND c.dxcc = %3 GROUP BY m.dxcc ) "
-                               " SELECT m.dxcc,"
-                               "	   %4 "
-                               " FROM (SELECT DISTINCT dxcc"
-                               "	   FROM modes) m"
-                               "        LEFT OUTER JOIN dxcc_summary c ON c.dxcc = m.dxcc "
-                               " ORDER BY m.dxcc").arg(stmt_band_part1.join(","))
-                                                  .arg(filter)
-                                                  .arg(dxcc)
-                                                  .arg(stmt_band_part2.join(","));
-
-        qCDebug(runtime) << stmt;
-
-        dxccTableModel->setQuery(stmt);
-
-        // get default Brush from Mode column - Mode Column has always the default color
-        const QVariant &defaultBrush = dxccTableModel->headerData(0, Qt::Horizontal, Qt::BackgroundRole);
-
-        dxccTableModel->setHeaderData(0, Qt::Horizontal, tr("Mode"));
-
-        for ( int i = 0; i < dxccBands.size(); i++)
-        {
-            dxccTableModel->setHeaderData(i+1, Qt::Horizontal, ( highlightedBand == dxccBands[i] ) ? QBrush(Qt::darkGray) : defaultBrush, Qt::BackgroundRole);
-            dxccTableModel->setHeaderData(i+1, Qt::Horizontal, dxccBands[i].name);
-        }
-    }
+        updateDxTable("c.dxcc = %1", dxcc, highlightedBand);
     else
+    {
         dxccTableModel->clear();
-
-    show();
+        show();
+    }
 }
